--- a/indbydelse-tilmelding-2023.qmd
+++ b/indbydelse-tilmelding-2023.qmd
@@ -49,12 +49,16 @@ cat(paste0("[Hørning Bordtennisklub](http://hoerningbtk.dk){target=_blank}, i s
 ```{r}
 #| layout-ncol: 2
 DataBilletKatAkt_T %>%
-	kbl(table.attr = "data-quarto-disable-processing=true",
-	    col.names = NA, align = "llr", escape = F,
-      caption = paste0("<p>", IkonBillet_V, " <b>Billettyper</b></p><i style=font-size:80%>", length(DataBilletKatAkt_T$Billettype), " valgmuligheder ved tilmelding.</i>")) %>%
-	kable_classic(position = "l", full_width = F, html_font = "verdana") %>%
+	kbl(col.names = NA, align = "llr", escape = F,
+      caption = paste0(
+        "<p>", IkonBillet_V, " Billettyper</p>",
+        "<i style=font-size:80%>", length(DataBilletKatAkt_T$Billettype), " valgmuligheder ved tilmelding.</i>")) %>%
+	kable_styling(position = "l", full_width = F) %>%
 	footnote(paste0(
-    "<i style=font-size:80%>Først til mølle-princip. Tilmeldingsfrist ", DataEventAarAkt_T$EventAarFristDato_DW_DMAA_DW, ".<br>Ved tilmelding modtages bekræftelsesmail.<br>Mikrogebyrer pålægges alle priser.</i>"),
+    "Først til mølle-princip.<br>",
+    "Tilmeldingsfrist ", DataEventAarAkt_T$EventAarFristDato_DW_DMAA_DW, ".<br>",
+    "Ved tilmelding modtages bekræftelsesmail.<br>",
+    "Mikrogebyrer pålægges alle priser."),
     general_title = "", escape = F) %>%
 	row_spec(0, background = DataEventAarAkt_T$EventAarFarve1_RD, color = "#FFFFFF") %>%
 	column_spec(1:3, extra_css = "border-top:0.7px solid #999999") %>%
@@ -111,15 +115,17 @@ data.frame(
     "Evt. omklædning til fest.",
     "<a style=color:#000000;text-decoration:none href=indbydelse-tilmelding-2023.qmd#fest-om-aftenen>Fest om aftenen</a>"),
 	check.names = F) %>%
-	kbl(table.attr = "data-quarto-disable-processing=true",
-	    col.names = NA, align = "l", escape = F,
-      caption = paste0("<p>", IkonTimeglas_V, " <b>Tidsplan</b></p><i style=font-size:80%><b>Bemærk</b>: Tidsplan kan ændres en smule alt efter deltagerantal.</i>")) %>%
-	kable_classic(position = "l", full_width = F, html_font = "verdana") %>%
+	kbl(col.names = NA, align = "l", escape = F,
+      caption = paste0(
+        "<p>", IkonTimeglas_V, " Tidsplan</p>",
+        "<i style=font-size:80%>Bemærk: Tidsplan kan ændres en smule alt efter deltagerantal.</i>")) %>%
+	kable_styling(position = "l", full_width = F) %>%
 	column_spec(1, width_min = "1em") %>%
 	column_spec(2, width_min = "7em") %>%
 	row_spec(0, background = DataEventAarAkt_T$EventAarFarve1_RD, color = "#FFFFFF") %>%
 	row_spec(6, bold = T) %>%
-	row_spec(c(1, 9), bold = T, background = DataEventAarAkt_T$EventAarFarve2_RD, extra_css = "border-top:0.7px solid #999999;border-bottom:0.7px solid #999999") %>%
+	row_spec(c(1, 9), bold = T, background = DataEventAarAkt_T$EventAarFarve2_RD, color = "#000000",
+  extra_css = "border-top:0.7px solid #999999;border-bottom:0.7px solid #999999") %>%
 	column_spec(2:3, extra_css = "border-top:0.7px solid #999999") %>%
 	gsub("\\{\\{&lt;|&lt;", "{{<", .) %>% gsub("&gt;}}", ">}}", .)
 ```
@@ -172,10 +178,12 @@ data.frame(
   	"<br>",
   	IkonTelefon_V, " <a href=tel:28722894 target=_blank>28722894</a>"),
   check.names = F) %>%
-  kbl(table.attr = "data-quarto-disable-processing=true",
-      col.names = NULL, align = "l", escape = F,
-      caption = paste(IkonPerson_V, "<b>Kontaktperson</b><br><i>Evt. spørgsmål til kontaktperson</i>")) %>%
-  kable_styling(position = "l", full_width = F, html_font = "verdana") %>%
+  kbl(col.names = NULL, align = "l", escape = F,
+      caption = paste(
+        IkonPerson_V, "Kontaktperson",
+        "<br>",
+        "<i style=font-size:80%>Evt. spørgsmål til kontaktperson</i>")) %>%
+  kable_styling(position = "l", full_width = F) %>%
   column_spec(1, width_min = "5.5em") %>%
   gsub("\\{\\{&lt;|&lt;", "{{<", .) %>% gsub("&gt;}}", ">}}", .)
 
@@ -188,10 +196,12 @@ data.frame(
   	"<br>",
   	IkonTelefon_V, " <a href=tel:23674387 target=_blank>23674387</a>"),
   check.names = F) %>%
-  kbl(table.attr = "data-quarto-disable-processing=true",
-      col.names = NULL, align = "l", escape = F,
-      caption = paste(IkonPerson_V, "<b>Stævneleder</b><br><i>Ansvarlig på stævnedagen</i>")) %>%
-  kable_styling(position = "l", full_width = F, html_font = "verdana") %>%
+  kbl(col.names = NULL, align = "l", escape = F,
+      caption = paste(
+        IkonPerson_V, "Stævneleder",
+        "<br>",
+        "<i style=font-size:80%>Ansvarlig på stævnedagen</i>")) %>%
+  kable_styling(position = "l", full_width = F) %>%
   column_spec(1, width_min = "5.5em") %>%
   gsub("\\{\\{&lt;|&lt;", "{{<", .) %>% gsub("&gt;}}", ">}}", .)
 
@@ -199,10 +209,12 @@ data.frame(
   "1" = paste0("<img src=filer/event/", egen_sti_fun(DataEventAarAkt_T$EventAar_RD), "/lokation.png height=66 style=border-radius:10px>"),
   "2" = DataEventAarAkt_T$EventAarStedAdrPostnrURL_DW,
   check.names = F) %>%
-  kbl(table.attr = "data-quarto-disable-processing=true",
-      col.names = NULL, align = "l", escape = F,
-      caption = paste(IkonLokation_V, "<b>Lokation</b><br><i>Geografisk placering</i>")) %>%
-  kable_styling(position = "l", full_width = F, html_font = "verdana") %>%
+  kbl(col.names = NULL, align = "l", escape = F,
+      caption = paste(
+        IkonLokation_V, "Lokation",
+        "<br>",
+        "<i style=font-size:80%>Geografisk placering</i>")) %>%
+  kable_styling(position = "l", full_width = F) %>%
   column_spec(1, width_min = "5.5em") %>%
   gsub("\\{\\{&lt;|&lt;", "{{<", .) %>% gsub("&gt;}}", ">}}", .)
 ```
@@ -305,22 +317,21 @@ if(nrow(DataPraemiePengeAkt_T) == 0) {
   data.frame() %>% kbl()
 } else {
   DataPraemiePengeAkt_T %>%
-    kbl(table.attr = "data-quarto-disable-processing=true",
-        col.names = NA, align = "lrr", escape = F,
-        caption = paste(
-          "<i style=font-size:90%>", IkonPenge_V, "<b>Præmiepenge</b></i>")) %>%
-    kable_classic(position = "l", full_width = F, html_font = "verdana") %>%
+    kbl(col.names = NA, align = "lrr", escape = F,
+        caption = paste(IkonPenge_V, "Præmiepenge")) %>%
+    kable_styling(position = "l", full_width = F) %>%
     row_spec(0, background = DataEventAarAkt_T$EventAarFarve1_RD, color = "#FFFFFF") %>%
     row_spec(which(DataPraemiePengeAkt_T$PraemieRank_DW == "1"),
-             bold = T, background = DataEventAarAkt_T$EventAarFarve2_RD) %>%
+             bold = T, background = DataEventAarAkt_T$EventAarFarve2_RD, color = "#000000") %>%
     row_spec(which(DataPraemiePengeAkt_T$PraemieRank_DW == "2"),
-             background = DataEventAarAkt_T$EventAarFarve2_RD) %>%
+             background = DataEventAarAkt_T$EventAarFarve2_RD, color = "#000000") %>%
     row_spec(which(DataPraemiePengeAkt_T$PraemieRank_DW == "3"),
-             background = DataEventAarAkt_T$EventAarFarve2_RD) %>%
+             background = DataEventAarAkt_T$EventAarFarve2_RD, color = "#000000") %>%
     add_indent(which(DataPraemiePengeAkt_T$PraemieRank_DW == "4")) %>%
     column_spec(3, italic = T, color = DataEventAarAkt_T$EventAarFarve1_RD) %>%
     footnote(paste(
-      "<i style=font-size:80%>Præmiesum på", distinct(filter(DataPraemiePengeAkt_T, PraemieRank_DW == 1), Præmiepenge), "er under<br>forudsætning af minimum 64 Ping Pong<br>deltagere.</i>"),
+      "Præmiesum på", distinct(filter(DataPraemiePengeAkt_T, PraemieRank_DW == 1), Præmiepenge),
+      "er under<br>forudsætning af minimum 64 Ping Pong<br>deltagere."),
       general_title = "", escape = F) %>%
     remove_column(4:8)
 }
