--- a/wcpp.qmd
+++ b/wcpp.qmd
@@ -71,8 +71,7 @@ data.frame(
   kable_styling(position = "l", full_width = F) %>%
   row_spec(0, background = "#1C2833", color = "#FFFFFF") %>%
   row_spec(1, bold = T, background = "#D5D8DC") %>%
-  column_spec(3, italic = T, color = "#5D6D7E") %>%
-  gsub("\\{\\{&lt;|&lt;", "{{<", .) %>% gsub("&gt;}}", ">}}", .)
+  column_spec(3, italic = T, color = "#5D6D7E")
 
 data.frame(
   "År" = c(
@@ -109,6 +108,5 @@ data.frame(
   kbl(col.names = NA, align = "cll", escape = F,
       caption = paste(IkonPokal_V, "WCPP-vindere statistik")) %>%
   kable_styling(position = "l", full_width = F) %>%
-  row_spec(0, background = "#1C2833", color = "#FFFFFF") %>%
-  gsub("\\{\\{&lt;|&lt;", "{{<", .) %>% gsub("&gt;}}", ">}}", .)
+  row_spec(0, background = "#1C2833", color = "#FFFFFF")
 ```
