--- a/indbydelse-tilmelding-2023.qmd
+++ b/indbydelse-tilmelding-2023.qmd
@@ -51,19 +51,17 @@ cat(paste0("[Hørning Bordtennisklub](http://hoerningbtk.dk){target=_blank}, i s
 DataBilletKatAkt_T %>%
 	kbl(col.names = NA, align = "llr", escape = F,
       caption = paste0(
-        "<p>", IkonBillet_V, " Billettyper</p>",
+        IkonBillet_V, " Billettyper<br>",
         "<i style=font-size:80%>", length(DataBilletKatAkt_T$Billettype), " valgmuligheder ved tilmelding.</i>")) %>%
 	kable_styling(position = "l", full_width = F) %>%
 	footnote(paste0(
-    "Først til mølle-princip.<br>",
-    "Tilmeldingsfrist ", DataEventAarAkt_T$EventAarFristDato_DW_DMAA_DW, ".<br>",
+    "Først til mølle-princip. Tilmeldingsfrist ", DataEventAarAkt_T$EventAarFristDato_DW_DMAA_DW, ".<br>",
     "Ved tilmelding modtages bekræftelsesmail.<br>",
     "Mikrogebyrer pålægges alle priser."),
     general_title = "", escape = F) %>%
 	row_spec(0, background = DataEventAarAkt_T$EventAarFarve1_RD, color = "#FFFFFF") %>%
 	column_spec(1:3, extra_css = "border-top:0.7px solid #999999") %>%
-  remove_column(4) %>%
-	gsub("\\{\\{&lt;|&lt;", "{{<", .) %>% gsub("&gt;}}", ">}}", .)
+  remove_column(4)
 
 data.frame(
 	"&emsp;" = c(
@@ -117,8 +115,8 @@ data.frame(
 	check.names = F) %>%
 	kbl(col.names = NA, align = "l", escape = F,
       caption = paste0(
-        "<p>", IkonTimeglas_V, " Tidsplan</p>",
-        "<i style=font-size:80%>Bemærk: Tidsplan kan ændres en smule alt efter deltagerantal.</i>")) %>%
+        IkonTimeglas_V, " Tidsplan<br>",
+        "<i style=font-size:75%>Bemærk: Tidsplan kan ændres en smule alt efter deltagerantal.</i>")) %>%
 	kable_styling(position = "l", full_width = F) %>%
 	column_spec(1, width_min = "1em") %>%
 	column_spec(2, width_min = "7em") %>%
@@ -126,8 +124,7 @@ data.frame(
 	row_spec(6, bold = T) %>%
 	row_spec(c(1, 9), bold = T, background = DataEventAarAkt_T$EventAarFarve2_RD, color = "#000000",
   extra_css = "border-top:0.7px solid #999999;border-bottom:0.7px solid #999999") %>%
-	column_spec(2:3, extra_css = "border-top:0.7px solid #999999") %>%
-	gsub("\\{\\{&lt;|&lt;", "{{<", .) %>% gsub("&gt;}}", ">}}", .)
+	column_spec(2:3, extra_css = "border-top:0.7px solid #999999")
 ```
 :::
 
@@ -179,13 +176,11 @@ data.frame(
   	IkonTelefon_V, " <a href=tel:28722894 target=_blank>28722894</a>"),
   check.names = F) %>%
   kbl(col.names = NULL, align = "l", escape = F,
-      caption = paste(
-        IkonPerson_V, "Kontaktperson",
-        "<br>",
+      caption = paste0(
+        IkonPerson_V, " Kontaktperson<br>",
         "<i style=font-size:80%>Evt. spørgsmål til kontaktperson</i>")) %>%
   kable_styling(position = "l", full_width = F) %>%
-  column_spec(1, width_min = "5.5em") %>%
-  gsub("\\{\\{&lt;|&lt;", "{{<", .) %>% gsub("&gt;}}", ">}}", .)
+  column_spec(1, width_min = "5.5em")
 
 data.frame(
   "1" = paste0("<img src=filer/event/", egen_sti_fun(DataEventAarAkt_T$EventAar_RD), "/staevneleder.png height=66 style=border-radius:10px>"),
@@ -197,26 +192,22 @@ data.frame(
   	IkonTelefon_V, " <a href=tel:23674387 target=_blank>23674387</a>"),
   check.names = F) %>%
   kbl(col.names = NULL, align = "l", escape = F,
-      caption = paste(
-        IkonPerson_V, "Stævneleder",
-        "<br>",
+      caption = paste0(
+        IkonPerson_V, " Stævneleder<br>",
         "<i style=font-size:80%>Ansvarlig på stævnedagen</i>")) %>%
   kable_styling(position = "l", full_width = F) %>%
-  column_spec(1, width_min = "5.5em") %>%
-  gsub("\\{\\{&lt;|&lt;", "{{<", .) %>% gsub("&gt;}}", ">}}", .)
+  column_spec(1, width_min = "5.5em")
 
 data.frame(
   "1" = paste0("<img src=filer/event/", egen_sti_fun(DataEventAarAkt_T$EventAar_RD), "/lokation.png height=66 style=border-radius:10px>"),
   "2" = DataEventAarAkt_T$EventAarStedAdrPostnrURL_DW,
   check.names = F) %>%
   kbl(col.names = NULL, align = "l", escape = F,
-      caption = paste(
-        IkonLokation_V, "Lokation",
-        "<br>",
+      caption = paste0(
+        IkonLokation_V, " Lokation<br>",
         "<i style=font-size:80%>Geografisk placering</i>")) %>%
   kable_styling(position = "l", full_width = F) %>%
-  column_spec(1, width_min = "5.5em") %>%
-  gsub("\\{\\{&lt;|&lt;", "{{<", .) %>% gsub("&gt;}}", ">}}", .)
+  column_spec(1, width_min = "5.5em")
 ```
 
 </div>
@@ -297,7 +288,7 @@ cat(paste0(
 
 ::: {.grid style="font-style:italic"}
 ::: {.g-col-12 .g-col-md-8}
-[**NYHED**]{.underline}**! 2 kvalifikationspladser til [VERDENSMESTERSKABERNE I PING PONG]{.underline} i Mexico City fra den 4. til 6. januar 2024 med en præmiesum på [\$36.000]{.underline} fordelt på SANDPAPIR, HARDBAT og TRÆBAT. Ekstra tilskud hertil på \$500 til 1. pladsen fra DM. Ny arrangør for VM i Ping Pong er International Classic Table Tennis Federation (ICTTF), som erstatter det ellers tidligere velkendte format fra Alexandra Palace i London arrangeret af Matchroom. Se mere om det nye VM-koncept i indbydelsen `r paste0("[HER](filer/event/", DataEventAarAkt_T$EventAarStartDato_DW_Aar_DW, "/ping-pong-world-cup-indbydelse.pdf){target=_blank}")`**.
+[**NYHED**]{.underline}**! 2 kvalifikationspladser til [VERDENSMESTERSKABERNE I PING PONG]{.underline} i Mexico City fra den 4. til 6. januar 2024 med en præmiesum på [\$36.000]{.underline} fordelt på SANDPAPIR, HARDBAT og TRÆBAT. Ekstra tilskud hertil på \$500 til 1. pladsen fra DM. Ny arrangør for VM i Ping Pong er International Classic Table Tennis Federation (ICTTF), som erstatter det ellers tidligere velkendte format fra Alexandra Palace i London arrangeret af Matchroom. Se mere om det nye VM-koncept i indbydelsen `r paste0("[HER](filer/event/", egen_sti_fun(DataEventAarAkt_T$EventAar_RD), "/ping-pong-world-cup-indbydelse.pdf){target=_blank}")`**.
 
 -   Der er også en gave til den **yngste**- og **ældste** Ping Pong deltager for at hylde mangfoldigheden.
 -   Pokaler/diplomer uddeles til alle gave-/præmietagere.
